@startuml

left to right direction

class Tablero {
    - filas: int
    - columnas: int
    + colocarFicha(ficha: Ficha, fila: int, columna: int): void
    + moverFicha(ficha: Ficha, nuevaFila: int, nuevaColumna: int): void
}

abstract class Ficha {
    - nombreFicha: String
    - puntosSalud: int
    - danio: int
    - defensa: int
    - rango: int
    - atacar: bool
    - desmayar: bool
    + getNombreFicha(): String
    + getPuntosSalud(): int
    + getDefensa(): int
    + getRango(): int
    + getAtacar(): bool
    + getDesmayar(): bool
    + setPuntosSalud(int puntos): void
    + setDanio(int danio): void
    + setDefensa(int defensa): void
    + setRango(int rango): void
    + setAtacar(bool atacar): void
}

class NodoFicha {
    - ficha: Ficha*
    - left: NodoFicha*
    - up: NodoFicha*
    - fila: int
    - columna: int
    + NodoFicha(ficha: Ficha*, posicionFila: int, posicionColumna: int)
    + ~NodoFicha()
    + getFicha(): Ficha*
    + getFila(): int
    + getColumna(): int
    + getLeft(): NodoFicha*
    + setLeft(NodoFicha* nodo): void
    + getUp(): NodoFicha*
    + setUp(NodoFicha* nodo): void
}

class MatrizPocoPoblada {
    - a_Fil: NodoFicha*
    - a_Col: NodoFicha*
    - filas: int
    - columnas: int
    + MatrizPocoPoblada(nFilas: int, nColumnas: int)
    + ~MatrizPocoPoblada()
    + buscarFicha(ficha: Ficha*, fila: int, columna: int): boolean
    + eliminarFicha(fila: int, columna: int): boolean
    + agregarFicha(ficha: Ficha*, fila: int, columna: int): boolean
}

class TurnoJugador {
    - tablero: Tablero
    + prepararTurno(): void
    + seleccionarAtaque(ficha: Ficha, tipo: String): void
    + avanzarFaseCombate(): void
}

class TurnoEnemigo {
    - tablero: Tablero
    + ejecutarAtaques(): void
}

class Estadisticas {
    + mostrarEstadisticas(): void
    + actualizarEstadisticas(): void
}

class SistemaJuego {
    + iniciarJuego(): void
    + finalizarJuego(): void
}

interface ISistemaJuego {
    + iniciarJuego(): void
    + cargarMapa(): void
    + cambiarPosicionFichas(): void
    + mostrarMenuEstadisticas(): void
}

' Relaciones entre clases
NodoFicha --> Ficha : contiene
MatrizPocoPoblada --> NodoFicha : maneja
Tablero --> MatrizPocoPoblada : usa
TurnoJugador --> Tablero : controla
TurnoEnemigo --> Tablero : controla
SistemaJuego --> ISistemaJuego : implementa
SistemaJuego --> Estadisticas : maneja
SistemaJuego --> TurnoJugador : inicia
SistemaJuego --> TurnoEnemigo : inicia
MatrizPocoPoblada --> Ficha : almacena
Tablero --> Ficha : posiciona

@enduml
